--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
 				  <img src="clap.gif" class="rounded">
 				</div>
 	    </div>
-	    <div class="col-md-2">v15</div>
+	    <div class="col-md-2"><h1 class="display-4, text-primary">v16</h1></div>
 	</div>
 </body>
 </html>
